flux/untrusted/snowflake-proxy/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: snowflake-proxy
  labels:
    network-zone: untrusted

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snowflake-proxy
  namespace: snowflake-proxy
  labels:
    app.kubernetes.io/name: snowflake-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: snowflake-proxy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: snowflake-proxy
    spec:
      containers:
        - name: snowflake-proxy
          image: thetorproject/snowflake-proxy:v2.13.1
          args:
            - "-ephemeral-ports-range"
            - "55000:55000"
          ports:
            - containerPort: 55000
              protocol: UDP
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
