flux/untrusted/snowflake-proxy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: snowflake-proxy-udp
  namespace: snowflake-proxy
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: snowflake-proxy
  ports:
    - name: webrtc-udp
      protocol: UDP
      port: 55000
      targetPort: 55000
